[gd_scene load_steps=10 format=3]

[ext_resource type="Script" path="res://-tests/heli_test/scripts/ui/in_game_menu.gd" id="1"]
[ext_resource type="Shader" path="res://-tests/heli_test/shaders/canvas_blur.gdshader" id="2"]
[ext_resource type="StyleBox" path="res://-tests/heli_test/ui/styles/button/button_hover.tres" id="3"]
[ext_resource type="StyleBox" path="res://-tests/heli_test/ui/styles/button/button_normal.tres" id="4"]
[ext_resource type="StyleBox" path="res://-tests/heli_test/ui/styles/button/button_pressed.tres" id="5"]
[ext_resource type="FontFile" path="res://-tests/heli_test/ui/fonts/JetBrainsMono/JetBrainsMono.tres" id="6"]
[ext_resource type="PackedScene" path="res://-tests/heli_test/ui/nodes/BlurBackground.tscn" id="7"]


[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.294118 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/amount = 2.0

[node name="InGameMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="BlurBackground" parent="." instance=ExtResource( 7 )]
material = SubResource( 2 )

[node name="Buttons" type="VBoxContainer" parent="."]
modulate = Color( 0, 1, 0.392157, 1 )
anchor_bottom = 1.0
offset_left = 70.0
offset_top = 70.0
offset_right = 300.0
offset_bottom = -70.0
grow_vertical = 0
custom_constants/separation = 5
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="Button" parent="Buttons"]
offset_top = 255.0
offset_right = 230.0
offset_bottom = 285.0
grow_vertical = 0
minimum_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = " Resume"
align = 0

[node name="BlurBackground" parent="Buttons/resume" instance=ExtResource( 7 )]
material = SubResource( 2 )

[node name="settings" type="Button" parent="Buttons"]
offset_top = 290.0
offset_right = 230.0
offset_bottom = 320.0
grow_vertical = 0
minimum_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = " Settings"
align = 0

[node name="BlurBackground" parent="Buttons/settings" instance=ExtResource( 7 )]
material = SubResource( 2 )

[node name="msens_slider" type="Panel" parent="Buttons"]
offset_top = 325.0
offset_right = 230.0
offset_bottom = 355.0
grow_vertical = 0
minimum_size = Vector2( 0, 30 )
custom_styles/panel = ExtResource( 4 )

[node name="BlurBackground" parent="Buttons/msens_slider" instance=ExtResource( 7 )]
material = SubResource( 2 )

[node name="MouseSensitivitySlider" type="HSlider" parent="Buttons/msens_slider"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
min_value = 1.0
max_value = 99.0
value = 75.0

[node name="restart" type="Button" parent="Buttons"]
offset_top = 360.0
offset_right = 230.0
offset_bottom = 390.0
grow_vertical = 0
minimum_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = " Restart Current Progress  "
align = 0

[node name="BlurBackground" parent="Buttons/restart" instance=ExtResource( 7 )]
material = SubResource( 2 )

[node name="menu" type="Button" parent="Buttons"]
offset_top = 395.0
offset_right = 230.0
offset_bottom = 425.0
grow_vertical = 0
minimum_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = " Quit to Main Menu"
align = 0

[node name="BlurBackground" parent="Buttons/menu" instance=ExtResource( 7 )]
material = SubResource( 2 )

[node name="quit" type="Button" parent="Buttons"]
offset_top = 430.0
offset_right = 230.0
offset_bottom = 460.0
grow_vertical = 0
minimum_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = " Quit Game"
align = 0

[node name="BlurBackground" parent="Buttons/quit" instance=ExtResource( 7 )]
material = SubResource( 2 )

[node name="ControlHelp" type="Panel" parent="."]
modulate = Color( 0, 1, 0.392157, 1 )
offset_left = 70.0
offset_top = 70.0
offset_right = 550.0
offset_bottom = 330.0
custom_styles/panel = ExtResource( 4 )

[node name="BlurBackground" parent="ControlHelp" instance=ExtResource( 7 )]
modulate = Color( 0.52549, 0.52549, 0.52549, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="ControlHelp"]
offset_left = 14.0
offset_top = 14.0
offset_right = 465.0
offset_bottom = 250.0
custom_fonts/normal_font = ExtResource( 6 )
text = "Controls:
[MOUSE] or [WASD]  Move helicopter
[SHIFT] or [Z]     Lift up/down
[Q]     or [E]     Pedal left/right
[ALT]   +  [MOUSE] Camera3D freelook
[C]                Camera3D toggle
[G]                Gear toggle
[P]                Power toggle
[F5]               Reset scene
[ESC]              Menu toggle
[MOUSE SCROLL]     3rd person camera zoom in/out"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/resume" to="." method="_on_resume_pressed"]
[connection signal="value_changed" from="Buttons/msens_slider/MouseSensitivitySlider" to="." method="_on_mouse_sensitivity_slider_value_changed"]
[connection signal="pressed" from="Buttons/quit" to="." method="_on_quit_pressed"]
